<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.DetailActivity">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detail_custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            app:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:titleCentered="true" />
        <androidx.cardview.widget.CardView
            android:id="@+id/beer_image_card"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_custom_toolbar"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/detail_beer_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:src="@drawable/sample_image"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/detail_beer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/beer_image_card"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/sample_beer_name" />
        <TextView
            android:id="@+id/detail_beer_tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_beer_name"
            tools:text="@string/sample_beer_tagline" />
        <TextView
            android:id="@+id/detail_beer_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_beer_tagline"
            tools:text="@string/sample_beer_description" />
        <TextView
            android:id="@+id/detail_beer_ph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_beer_description"
            tools:text="@string/sample_beer_ph" />
        <TextView
            android:id="@+id/detail_beer_food_pairing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_beer_ph"
            tools:text="@string/sample_beer_food_pairing" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>